--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.vs/brewflow/v14/.suo
+__vm/Upload.vmps.xml
+__vm/Configuration.Debug.vmps.xml
+__vm/Compile.vmps.xml
+__vm/.brewflow.vsarduino.h
+__vm/.brewflow - Kopi.vsarduino.h
+brewflow.vcxproj
+brewflow.vcxproj
+brewflow.vcxproj.filters
